Display only approved books

--- a/Mobile/src/pages/home/home.html
+++ b/Mobile/src/pages/home/home.html
@@ -4,7 +4,7 @@
 <button ion-button menuToggle>
 <ion-icon name="menu"></ion-icon>
 </button>
-<p text-center text-white>Home</p>
+<p text-center>Home</p>
 <ion-buttons end>
 <!-- <button ion-button tappable (click)="presentNotifications($event)">
 <ion-icon name="notifications"></ion-icon>
@@ -18,7 +18,7 @@
 <div class="user-avatar text-center" text-center>
 	<img [src]="pro_pic" width="80px">
 </div>
-<p ion-text text-center text-white class="no-margin bold text-white">
+<p ion-text text-center class="no-margin bold text-white">
 	{{ fullname }}
 </p>
 </ion-toolbar>
