--- a/Mobile/src/pages/preview/preview.html
+++ b/Mobile/src/pages/preview/preview.html
@@ -1,6 +1,6 @@
 <ion-header>
 <ion-navbar color="ellumiate">
-<p text-center text-white>{{ title }}</p>
+<p text-center>{{ title }}</p>
 <ion-buttons end>
 <!-- <button ion-button tappable (click)="presentNotifications($event)">
 <ion-icon name="notifications"></ion-icon>
