--- a/Mobile/src/pages/profile/profile.html
+++ b/Mobile/src/pages/profile/profile.html
@@ -1,6 +1,6 @@
 <ion-header>
 <ion-navbar color="ellumiate">
-<ion-title>Profile</ion-title>
+<ion-title text-center>Profile</ion-title>
 </ion-navbar>
 </ion-header>
 <ion-content padding>
@@ -48,6 +48,6 @@
 	</ion-item>
 </form>
 <div margin-top>
-	<button ion-button block color="dark" tappable (click)="register();">UPDATE</button>
+	<button ion-button block color="danger" tappable (click)="register();">UPDATE</button>
 </div>
 </ion-content>
