--- a/Mobile/src/pages/settings/settings.html
+++ b/Mobile/src/pages/settings/settings.html
@@ -1,8 +1,8 @@
 <ion-header>
-<ion-navbar color="ellumiate">
-<ion-title>Chart 0)</ion-title>
+<ion-navbar text-center color="ellumiate">
+<ion-title>Chart (0)</ion-title>
 </ion-navbar>
 </ion-header>
 <ion-content padding>
-<h1>No new Items</h1>
+<h1 text-center>No new Items</h1>
 </ion-content>
