--- a/Mobile/src/pages/full-chapter/full-chapter.html
+++ b/Mobile/src/pages/full-chapter/full-chapter.html
@@ -10,4 +10,7 @@ Ionic pages and navigation.
 </ion-header>
 <ion-content padding>
 <div [innerHtml]="content"></div>
+<ion-fab right bottom>
+<button ion-fab color="ellumiate" (click)="openModal()"><ion-icon name="create"></ion-icon></button>
+</ion-fab>
 </ion-content>
