--- a/Mobile/src/pages/home/home.html
+++ b/Mobile/src/pages/home/home.html
@@ -4,11 +4,8 @@
 <button ion-button menuToggle>
 <ion-icon name="menu"></ion-icon>
 </button>
-<p text-center>Home</p>
+<ion-title text-center>Home</ion-title>
 <ion-buttons end>
-<!-- <button ion-button tappable (click)="presentNotifications($event)">
-<ion-icon name="notifications"></ion-icon>
-</button> -->
 <button ion-button tappable (click)="goToAccount()">
 <ion-icon name="basket"></ion-icon>
 </button>
@@ -18,9 +15,7 @@
 <div class="user-avatar text-center" text-center>
 	<img [src]="pro_pic" width="80px">
 </div>
-<p ion-text text-center class="no-margin bold text-white">
-	{{ fullname }}
-</p>
+<ion-title text-center>{{ fullname }}</ion-title>
 </ion-toolbar>
 </ion-header>
 <ion-content padding class="animated fadeIn common-bg">
@@ -47,7 +42,8 @@
 	<ion-row nowrap>
 	<div class="scrollmenu" *ngFor="let book of books;" (click)="selectBook(book);">
 		<a href="#">
-			<img src="{{ assets_directory }}{{ book.cover_url }}" width="85">
+			<!--<img src="{{ assets_directory }}{{ book.cover_url }}" width="85">-->
+			<img src="assets/imgs/1.jpg" width="85">
 			<br><span class="title">{{ book.title }}</span>
 			<br><span class="author">{{ book.author }}</span>
 		</a>
