--- a/Mobile/src/pages/listen/listen.html
+++ b/Mobile/src/pages/listen/listen.html
@@ -1,17 +1,20 @@
 <ion-header>
 <ion-navbar color="ellumiate">
-<p text-center text-white>{{ title }}</p>
+<ion-title text-center>{{ title }}</ion-title>
 </ion-navbar>
 </ion-header>
-<ion-content padding>
+<ion-content padding text-center>
 <div id="container-view">
 	<div id="content-view">
-		{{ title }}
-		{{ sound }}
+		{{ title }}<br>
+		Chapter {{ sound }}
 	</div>
 </div>
 <ion-grid>
 <ion-row>
+<ion-col col-12>
+<progress-bar [progress]="loadProgress"></progress-bar>
+</ion-col>
 <ion-col col-6>
 <button ion-button icon-only color="dark" block clear tappable (click)="PlaySound();">
 <ion-icon name="play"></ion-icon>
