--- a/Mobile/src/pages/preview/preview.html
+++ b/Mobile/src/pages/preview/preview.html
@@ -1,6 +1,6 @@
 <ion-header>
 <ion-navbar color="ellumiate">
-<p text-center>{{ title }}</p>
+<ion-title text-center>{{ title }}</ion-title>
 <ion-buttons end>
 <!-- <button ion-button tappable (click)="presentNotifications($event)">
 <ion-icon name="notifications"></ion-icon>
@@ -12,5 +12,8 @@
 </ion-navbar>
 </ion-header>
 <ion-content padding>
-<div [innerHtml]="content"></div>
+<div [innerHtml]="content | sanitizeHtml"></div>
+<ion-fab right bottom>
+<button ion-fab color="ellumiate" (click)="openModal()"><ion-icon name="create"></ion-icon></button>
+</ion-fab>
 </ion-content>
