--- a/Mobile/src/pages/notes/notes.html
+++ b/Mobile/src/pages/notes/notes.html
@@ -3,7 +3,7 @@
 <ion-title>Add a notes</ion-title>
 </ion-navbar>
 </ion-header>
-<ion-content padding>
+<ion-content padding color="ellumiate">
 <ion-item>
 <ion-textarea placeholder="Type your notes here"
 [(ngModel)]="note" name="note" style="width:100%; height: 100%;"></ion-textarea>
