Split Test and fix

--- a/Mobile/src/pages/books-details/books-details.html
+++ b/Mobile/src/pages/books-details/books-details.html
@@ -7,7 +7,7 @@
 <ion-grid class="card" padding>
 <ion-row>
 <!--<ion-col width-50><img src="{{ assets_directory }}{{ selected_book.cover_url }}" width="85"></ion-col>-->
-<ion-col width-50><img src="assets/imgs/1.jpg" width="85"></ion-col>
+<ion-col width-50><img src="{{ assets_directory }}{{ selected_book.cover_url }}" width="85"></ion-col>
 <ion-col width-50>
 <h4 class="location text-dark">{{ selected_book.title }}</h4>
 </ion-col>
@@ -28,9 +28,10 @@
 <ion-list>
 <ion-item  *ngFor="let chapter of chapters;">
 <div class="numbering-chapters" item-start>
-	<span class="small-text">Chapter</span><br><span class="large-chapter-text">{{ chapter.name }}</span>
+	<span class="small-text">Chapter</span><br><span class="large-chapter-text">{{ chapter.chapter_number }}</span>
 </div>
-<p>{{ chapter.chapter_number }} Page(s)</p>
+<h3>{{ chapter.name }}</h3>
+<p>{{ chapter.number_of_pages }} Page(s)</p>
 <button ion-button round small small-text color="ellumiate" item-end tappable (click)="preview(chapter.chapter_preview_content, selected_book.title,chapter.name );">Preview</button>
 <button ion-button round outline small-text small color="ellumiate" item-end tappable (click)="download( chapter.name, selected_book.title  );">Download</button>
 </ion-item>
