--- a/Mobile/src/pages/home/home.html
+++ b/Mobile/src/pages/home/home.html
@@ -4,7 +4,7 @@
 <button ion-button menuToggle>
 <ion-icon name="menu"></ion-icon>
 </button>
-<ion-title text-center>Home</ion-title>
+<h4 class="text-center" text-center style="color: white !important;">Home</h4>
 <ion-buttons end>
 <button ion-button tappable (click)="goToAccount()">
 <ion-icon name="basket"></ion-icon>
@@ -15,7 +15,7 @@
 <div class="user-avatar text-center" text-center>
 	<img [src]="pro_pic" width="80px">
 </div>
-<ion-title text-center>{{ fullname }}</ion-title>
+<p class="text-center" text-center style="color: white !important;">{{ fullname }}</p>
 </ion-toolbar>
 </ion-header>
 <ion-content padding class="animated fadeIn common-bg">
