--- a/Mobile/src/pages/registration/registration.html
+++ b/Mobile/src/pages/registration/registration.html
@@ -25,19 +25,19 @@
 	</ion-item>
 	<ion-item>
 	<ion-label fixed>Email</ion-label>
-	<ion-input type="email" [(ngModel)]="email" name="email"></ion-input>
+	<ion-input type="email" [(ngModel)]="email" name="email" placeholder="jondoe@example.com"></ion-input>
 	</ion-item>
 	<ion-item>
 	<ion-label fixed>Date OF Birth</ion-label>
-	<ion-input type="text" [(ngModel)]="dob" name="dob"></ion-input>
+	<ion-input type="text" [(ngModel)]="dob" name="dob" placeholder="DD/MM/YYYY"></ion-input>
 	</ion-item>
 	<ion-item>
 	<ion-label fixed>Cell Phone</ion-label>
-	<ion-input type="text" [(ngModel)]="cell_phone_number" name="cell_phone_number"></ion-input>
+	<ion-input type="text" [(ngModel)]="cell_phone_number" name="cell_phone_number" placeholder="0123456789"></ion-input>
 	</ion-item>
 	<ion-item>
 	<ion-label fixed>Password</ion-label>
-	<ion-input type="password" [(ngModel)]="password" name="password"></ion-input>
+	<ion-input type="password" [(ngModel)]="password" name="password" placeholder="6-12 character long [a-z][0-9]"></ion-input>
 	</ion-item>
 </form>
 <div margin-top>
