--- a/Mobile/src/pages/preview/preview.html
+++ b/Mobile/src/pages/preview/preview.html
@@ -11,7 +11,7 @@
 </ion-buttons>
 </ion-navbar>
 </ion-header>
-<ion-content padding>
+<ion-content padding scrollY="true" zoom="true">
 <div [innerHtml]="content | sanitizeHtml"></div>
 <ion-fab right bottom>
 <button ion-fab color="ellumiate" (click)="openModal()"><ion-icon name="create"></ion-icon></button>
