--- a/Mobile/src/pages/listen/listen.html
+++ b/Mobile/src/pages/listen/listen.html
@@ -6,8 +6,7 @@
 <ion-content padding text-center>
 <div id="container-view">
 	<div id="content-view">
-		{{ title }}<br>
-		Chapter {{ sound }}
+		{{ title }}
 	</div>
 </div>
 <ion-grid>
