--- a/Mobile/src/pages/registration/registration.html
+++ b/Mobile/src/pages/registration/registration.html
@@ -36,6 +36,20 @@
 	<ion-input type="text" [(ngModel)]="cell_phone_number" name="cell_phone_number" placeholder="0123456789"></ion-input>
 	</ion-item>
 	<ion-item>
+	<ion-label fixed>Province</ion-label>
+	<ion-select color="ellumiate" [(ngModel)]="province">
+	<ion-option value="Eastern Cape">Eastern Cape</ion-option>
+	<ion-option value="Free State">Free State</ion-option>
+	<ion-option value="Gauteng">Gauteng</ion-option>
+	<ion-option value="KwaZulu-Natal">KwaZulu-Natal</ion-option>
+	<ion-option value="Limpopo">Limpopo</ion-option>
+	<ion-option value="Mpumalanga">Mpumalanga</ion-option>
+	<ion-option value="North West">North West</ion-option>
+	<ion-option value="Northern Cape">Northern Cape</ion-option>
+	<ion-option value="Western Cape">Western Cape</ion-option>
+	</ion-select>
+	</ion-item>
+	<ion-item>
 	<ion-label fixed>Password</ion-label>
 	<ion-input type="password" [(ngModel)]="password" name="password" placeholder="6-12 character long [a-z][0-9]"></ion-input>
 	</ion-item>
