--- a/Mobile/src/pages/login/login.html
+++ b/Mobile/src/pages/login/login.html
@@ -27,14 +27,19 @@
 		<p text-center ion-text color="secondary">Or Sign in with:</p>
 		<ion-grid>
 		<ion-row>
-		<ion-col col-6>
+		<ion-col col-4>
 		<button ion-button icon-only block class="btn-facebook">
 		<ion-icon name="logo-facebook"></ion-icon>
 		</button>
 		</ion-col>
-		<ion-col col-6>
+		<ion-col col-4>
 		<button ion-button icon-only block class="btn-twitter">
 		<ion-icon name="logo-twitter"></ion-icon>
+		</button>
+		</ion-col>
+		<ion-col col-4>
+		<button ion-button icon-only block class="btn-twitter">
+		<ion-icon name="logo-google-plus"></ion-icon>
 		</button>
 		</ion-col>
 		</ion-row>
